--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -8,7 +8,7 @@ on:
         description: Whether to attempt publishing snapshots. When false, the workflow will only run build.
         type: string
         default: "no"
-        required: false
+        required: true
     secrets:
       gradle_enterprise_access_key:
         description: Value of the Gradle Enterprise access token to use.
