--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -22,7 +22,7 @@ on:
     secrets:
       gradle_enterprise_access_key:
         description: Value of the Gradle Enterprise access token to use.
-        required: true
+        required: false
       ossrh_username:
         required: false
       ossrh_token:
