--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -9,16 +9,21 @@ on:
         type: boolean
         default: true
         required: false
+      publish_tests:
+        description: Whether to attempt publishing unit test results.
+        type: boolean
+        default: true
+        required: false
       build_on_graal:
         description: Whether to perform the main build and test operation on graalvm. When false, the workflow will use actions/setup-java.
         type: boolean
         required: false
         default: false
       install_graal_languages:
-        description: String of space-separated graal languages to install when "build_on_graal" is true. For example, "nodejs python ruby R llvm-toolchain"
+        description: Single string of space-separated graal languages to install when "build_on_graal" is true. For example, "nodejs python ruby R llvm-toolchain"
         type: string
         required: false
-        default: nodejs python ruby R llvm-toolchain
+        default: ""
     secrets:
       gradle_enterprise_access_key:
         description: Value of the Gradle Enterprise access token to use.
@@ -57,7 +62,7 @@ jobs:
           java: java11
           graalvm: 21.2.0
       - name: install-polyglot-languages
-        if: inputs.build_on_graal
+        if: inputs.build_on_graal && inputs.install_graal_languages != ''
         run: gu install ${{ inputs.install_graal_languages }}
       ########################
       - name: build
@@ -66,7 +71,7 @@ jobs:
           arguments: build
       - name: publish-tests
         uses: EnricoMi/publish-unit-test-result-action@v1
-        if: always()
+        if: inputs.publish_tests && (success() || failure())
         with:
           files: "**/build/test-results/test/TEST-*.xml"
       - name: publish-snapshots
