--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -71,7 +71,7 @@ jobs:
           arguments: build
       - name: publish-tests
         uses: EnricoMi/publish-unit-test-result-action@v1
-        if: inputs.publish_tests && (success() || failure())
+        if: always() && inputs.publish_tests
         with:
           files: "**/build/test-results/**/TEST-*.xml"
       - name: publish-snapshots
