Ensure -Preleasing is added on publish-gradle

--- a/.github/workflows/publish-gradle.yml
+++ b/.github/workflows/publish-gradle.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           arguments: |
             ${{ env.GRADLE_SWITCHES }}
+            -Preleasing
             -Prelease.disableGitChecks=true
             -Prelease.useLastTag=true
             candidate
@@ -54,6 +55,7 @@ jobs:
         with:
           arguments: |
             ${{ env.GRADLE_SWITCHES }}
+            -Preleasing
             -Prelease.disableGitChecks=true
             -Prelease.useLastTag=true
             final
