Check if condition on moderne-ingest secrets to allow forks with null secrets passed to operate

--- a/.github/workflows/moderne-ingest.yml
+++ b/.github/workflows/moderne-ingest.yml
@@ -11,6 +11,7 @@ on:
 jobs:
   ingest:
     runs-on: ubuntu-latest
+    if: secrets.moderne_api_access_token != ''
     steps:
       - uses: actions/checkout@v2
       - uses: docker://moderne/ingest:java11-latest
