--- a/.github/workflows/moderne-ingest.yml
+++ b/.github/workflows/moderne-ingest.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   ingest:
     runs-on: ubuntu-latest
-    if: secrets.moderne_api_access_token != ''
+    if: github.repository_owner == 'openrewrite'
     steps:
       - uses: actions/checkout@v2
       - uses: docker://moderne/ingest:java11-latest
