polish, fixup naming of dependency-check job

--- a/.github/workflows/dependency-check-gradle.yml
+++ b/.github/workflows/dependency-check-gradle.yml
@@ -35,7 +35,7 @@ env:
   GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.gradle_enterprise_cache_password }}
 
 jobs:
-  build:
+  dependency-check:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
