--- a/.github/workflows/repository-backup.yml
+++ b/.github/workflows/repository-backup.yml
@@ -10,6 +10,9 @@ on:
       bucket_secret_access_key:
         description: Value of the cloud storage bucket backup secret access key (e.g., S3 has ACCESS_KEY_SECRET).
         required: true
+      bucket_mirror_target:
+        description: Name of the cloud storage bucket backup to use.
+        required: true
 
 jobs:
   repository-backup:
@@ -22,6 +25,6 @@ jobs:
         env:
           ACCESS_KEY_ID: ${{ secrets.bucket_access_key_id }}
           SECRET_ACCESS_KEY: ${{ secrets.bucket_secret_access_key }}
-          MIRROR_TARGET: moderne-github-repository-backups/${{ github.repository }}
+          MIRROR_TARGET: ${{ secrets.bucket_mirror_target }}/${{ github.repository }}
         with:
           args: --overwrite --remove
