--- a/.github/workflows/repository-backup.yml
+++ b/.github/workflows/repository-backup.yml
@@ -26,5 +26,6 @@ jobs:
           ACCESS_KEY_ID: ${{ secrets.bucket_access_key_id }}
           SECRET_ACCESS_KEY: ${{ secrets.bucket_secret_access_key }}
           MIRROR_TARGET: ${{ secrets.bucket_mirror_target }}/${{ github.repository }}
+          STORAGE_SERVICE_URL: https://s3.us-west-2.amazonaws.com
         with:
           args: --overwrite --remove
