--- a/.github/workflows/dependency-check-gradle.yml
+++ b/.github/workflows/dependency-check-gradle.yml
@@ -28,39 +28,9 @@ on:
         description: Value of the Gradle Enterprise Cache password to use.
         required: false
 
-env:
-  GRADLE_SWITCHES: --console=plain --info --warning-mode=all
-  GRADLE_ENTERPRISE_ACCESS_KEY: ${{ secrets.gradle_enterprise_access_key }}
-  GRADLE_ENTERPRISE_CACHE_USERNAME: ${{ secrets.gradle_enterprise_cache_username }}
-  GRADLE_ENTERPRISE_CACHE_PASSWORD: ${{ secrets.gradle_enterprise_cache_password }}
-
 jobs:
   dependency-check:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v3.2.0
-        with:
-          distribution: temurin
-          java-version: 11
-      - name: dependency-check
-        uses: gradle/gradle-build-action@v2
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} dependencyCheckAggregate
-      - uses: actions/upload-artifact@v3
-        if: always() && inputs.upload_artifact
-        with:
-          name: dependency-check-report
-          path: build/reports
-      - name: notify-slack
-        if: failure() && inputs.notify_slack
-        uses: rtCamp/action-slack-notify@v2
-        env:
-          SLACK_CHANNEL: vulnerability-alerts
-          SLACK_COLOR: ${{ job.status }}
-          SLACK_ICON: https://image.pngaaa.com/813/2886813-middle.png
-          SLACK_MESSAGE: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          SLACK_TITLE: ${{ github.repository }} dependency-check vulnerability report
-          SLACK_USERNAME: ${{ github.repository }}
-          SLACK_WEBHOOK: ${{ secrets.slack_alerts_webhook }}
-          MSG_MINIMAL: true
+      - name: deprecation notice
+        run: echo "This action is deprecated. See http://github.com/moderneinc/dependency-vulnerability-reports"
