--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -82,7 +82,7 @@ jobs:
         uses: EnricoMi/publish-unit-test-result-action@v2
         if: always() && inputs.publish_tests
         with:
-          files: ./**/build/test-results/**/TEST-*.xml
+          junit_files: ./**/build/test-results/**/TEST-*.xml
       - name: publish-snapshots
         if: inputs.publish_snapshots && github.event_name != 'pull_request' && github.repository_owner == 'openrewrite'
         uses: gradle/gradle-build-action@v2
