--- a/.github/workflows/publish-gradle.yml
+++ b/.github/workflows/publish-gradle.yml
@@ -33,7 +33,7 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-java@v3.4.1
         with:
-          distribution: temurin
+          distribution: zulu
           java-version: 17
 
       - name: publish-candidate
