--- a/.github/workflows/dependency-check-gradle.yml
+++ b/.github/workflows/dependency-check-gradle.yml
@@ -30,7 +30,7 @@ on:
 
 jobs:
   dependency-check:
-    runs-on: ubuntu-latest
+    runs-on: macos-12
     steps:
       - name: deprecation notice
         run: echo "This action is deprecated. See http://github.com/moderneinc/dependency-vulnerability-reports"
