Only run repository backup for `openrewrite` org

--- a/.github/workflows/repository-backup.yml
+++ b/.github/workflows/repository-backup.yml
@@ -23,6 +23,7 @@ on:
 jobs:
   repository-backup:
     runs-on: ubuntu-latest
+    if: github.repository_owner == 'openrewrite'
     steps:
       - uses: actions/checkout@v3
         with:
