Update message and indicate action

--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -105,12 +105,12 @@ jobs:
           payload: |
             {
               "blocks": [
-              "text": "Scheduled GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}",
+              "text": "${{ github.repository }} scheduled job: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}\nPlease review and fix pipeline.",
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "Scheduled GitHub Action build result: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}"
+                    "text": "${{ github.repository }} scheduled job: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}\nPlease review and fix pipeline."
                   }
                 }
               ]
