--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -78,11 +78,13 @@ jobs:
       - name: install-polyglot-languages
         if: inputs.build_on_graal && inputs.install_graal_languages != ''
         run: gu install ${{ inputs.install_graal_languages }}
+
       ########################
       - name: build
         uses: gradle/gradle-build-action@v2
         with:
           arguments: ${{ env.GRADLE_SWITCHES }} build
+
       - name: publish-snapshots
         if: inputs.publish_snapshots && github.event_name != 'pull_request' && github.repository_owner == 'openrewrite'
         uses: gradle/gradle-build-action@v2
@@ -93,3 +95,26 @@ jobs:
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ossrh_token }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.ossrh_signing_key }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.ossrh_signing_password }}
+
+      ########################
+      - name: slack-scheduled-failures
+        if: ${{ github.event_name == 'schedule' }} && failure()
+        uses: slackapi/slack-github-action@v1.24.0
+        with:
+          # This data can be any valid JSON from a previous step in the GitHub Action
+          payload: |
+            {
+              "blocks": [
+              "text": "${{ github.repository }} scheduled job: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}\nPlease review and fix pipeline.",
+                {
+                  "type": "section",
+                  "text": {
+                    "type": "mrkdwn",
+                    "text": "${{ github.repository }} scheduled job: ${{ job.status }}\n${{ github.event.pull_request.html_url || github.event.head_commit.url }}\nPlease review and fix pipeline."
+                  }
+                }
+              ]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_SCHEDULED_FAILURES }}
+          SLACK_WEBHOOK_TYPE: INCOMING_WEBHOOK
