--- a/.github/workflows/repository-backup.yml
+++ b/.github/workflows/repository-backup.yml
@@ -28,6 +28,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          progress: false
       - uses: peter-evans/s3-backup@v1
         env:
           ACCESS_KEY_ID: ${{ secrets.bucket_access_key_id }}
