--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -51,6 +51,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          progress: false
       - uses: gradle/wrapper-validation-action@v1
       ########################
       - uses: actions/setup-java@v3.12.0
