--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -51,7 +51,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          progress: false
+          show-progress: false
       - uses: gradle/wrapper-validation-action@v1
       ########################
       - uses: actions/setup-java@v4.0.0
