--- a/.github/workflows/publish-gradle.yml
+++ b/.github/workflows/publish-gradle.yml
@@ -31,7 +31,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          progress: false
+          show-progress: false
       - uses: actions/setup-java@v4.0.0
         with:
           distribution: temurin
