--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -34,6 +34,7 @@ on:
             - org.openrewrite.java.recipes.ExecutionContextParameterName
             - org.openrewrite.java.recipes.MissingOptionExample
             - org.openrewrite.java.recipes.RecipeEqualsAndHashCodeCallSuper
+            - org.openrewrite.java.recipes.UseTreeRandomId
           ---
           type: specs.openrewrite.org/v1beta/recipe
           name: org.openrewrite.recipes.RecipeTestingBestPractices
