--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -42,6 +42,10 @@ on:
             }
           }
 
+concurrency:
+  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.ref }}'
+  cancel-in-progress: true
+
 env:
   GRADLE_SWITCHES: --console=plain --info --stacktrace --warning-mode=all --no-daemon
 
