Group concurrent runs by github.event.number in receive-pr.yml

--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -43,7 +43,7 @@ on:
           }
 
 concurrency:
-  group: '${{ github.workflow }} @ ${{ github.event.pull_request.head.ref }}'
+  group: '${{ github.workflow }} @ ${{ github.event.number }}'
   cancel-in-progress: true
 
 env:
