--- a/.github/workflows/comment-pr.yml
+++ b/.github/workflows/comment-pr.yml
@@ -24,6 +24,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: patch
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
       - name: Apply patch
         run: |
@@ -34,6 +35,7 @@ jobs:
       - uses: actions/download-artifact@v4
         with:
           name: pr_number
+          github-token: ${{ secrets.GITHUB_TOKEN }}
           run-id: ${{ github.event.workflow_run.id }}
       - name: Read pr_number.txt
         run: |
