--- a/.github/workflows/receive-pr-runner.yml
+++ b/.github/workflows/receive-pr-runner.yml
@@ -44,7 +44,7 @@ jobs:
           curl -s --request GET --url "https://repo1.maven.org/maven2/io/moderne/moderne-cli/${LATEST_VERSION}/moderne-cli-${LATEST_VERSION}.jar" --output mod.jar
 
       # Execute best practices recipe
-      - name: Apply OpenRewrite best practices
+      - name: Build and run recipe
         run: |
           java -jar mod.jar config recipes artifacts artifactory edit ${{ inputs.artifactory_url }}
           java -jar mod.jar config recipes jar install ${{ inputs.recipe_artifact }}
