--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -48,7 +48,7 @@ jobs:
         with:
           fetch-depth: 0
           show-progress: false
-      - uses: gradle/wrapper-validation-action@v2
+      - uses: gradle/actions/wrapper-validation@v3
       ########################
       - uses: actions/setup-java@v4.0.0
         with:
@@ -56,19 +56,18 @@ jobs:
           java-version: ${{ inputs.java_version }}
 
       ########################
-      - name: build
+      - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} build
+
+      - name: build
+        run: ./gradlew ${{ env.GRADLE_SWITCHES }} build
 
       - name: publish-snapshots
         if: >
           inputs.publish_snapshots &&
           github.event_name != 'pull_request' &&
           (github.repository_owner == 'openrewrite' || github.repository_owner == 'moderneinc')
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} snapshot publish -PforceSigning -x test
+        run: ./gradlew ${{ env.GRADLE_SWITCHES }} snapshot publish -PforceSigning -x test
         env:
           ORG_GRADLE_PROJECT_sonatypeUsername: ${{ secrets.ossrh_username }}
           ORG_GRADLE_PROJECT_sonatypePassword: ${{ secrets.ossrh_token }}
