--- a/.github/workflows/publish-gradle.yml
+++ b/.github/workflows/publish-gradle.yml
@@ -37,28 +37,29 @@ jobs:
           distribution: temurin
           java-version: 21
 
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
       - name: publish-candidate
         if: contains(github.ref, '-rc.')
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: |
-            ${{ env.GRADLE_SWITCHES }}
-            -Preleasing
-            -Prelease.disableGitChecks=true
-            -Prelease.useLastTag=true
-            candidate
-            publish
-            closeAndReleaseSonatypeStagingRepository
+        run: |
+          ./gradlew
+          ${{ env.GRADLE_SWITCHES }}
+          -Preleasing
+          -Prelease.disableGitChecks=true
+          -Prelease.useLastTag=true
+          candidate
+          publish
+          closeAndReleaseSonatypeStagingRepository
 
       - name: publish-release
         if: (!contains(github.ref, '-rc.'))
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: |
-            ${{ env.GRADLE_SWITCHES }}
-            -Preleasing
-            -Prelease.disableGitChecks=true
-            -Prelease.useLastTag=true
-            final
-            publish
-            closeAndReleaseSonatypeStagingRepository
+        run: |
+          ./gradlew
+          ${{ env.GRADLE_SWITCHES }}
+          -Preleasing
+          -Prelease.disableGitChecks=true
+          -Prelease.useLastTag=true
+          final
+          publish
+          closeAndReleaseSonatypeStagingRepository
