--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -56,7 +56,7 @@ jobs:
         with:
           ref: ${{github.event.pull_request.head.ref}}
           repository: ${{github.event.pull_request.head.repo.full_name}}
-      - uses: gradle/wrapper-validation-action@v2
+      - uses: gradle/actions/wrapper-validation@v3
       - uses: actions/setup-java@v4
         with:
           distribution: temurin
@@ -72,11 +72,13 @@ jobs:
       - name: Remove pr_number.txt
         run: rm -f pr_number.txt
 
+      # Setup Gradle
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v3
+
       # Apply license headers
       - name: Apply license headers
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} licenseFormat
+        run: ./gradlew ${{ env.GRADLE_SWITCHES }} licenseFormat
 
       # Execute best practices recipe
       - name: Create temporary files
@@ -84,9 +86,7 @@ jobs:
           echo "${{ inputs.rewrite_yml }}" > rewrite.yml
           echo "${{ inputs.init_gradle }}" > rewrite-init.gradle
       - name: Apply OpenRewrite best practices
-        uses: gradle/actions/setup-gradle@v3
-        with:
-          arguments: ${{ env.GRADLE_SWITCHES }} rewriteRun --init-script rewrite-init.gradle -Drewrite.activeRecipe=${{ inputs.recipe }}
+        run: ./gradlew ${{ env.GRADLE_SWITCHES }} rewriteRun --init-script rewrite-init.gradle -Drewrite.activeRecipe=${{ inputs.recipe }}
       - name: Remove temporary files
         run: rm -f rewrite.yml rewrite-init.gradle
 
