--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -25,13 +25,13 @@ on:
               maven { url 'https://plugins.gradle.org/m2' }
             }
             dependencies {
-              classpath('org.openrewrite:plugin:latest.release')
+              classpath('org.openrewrite:plugin:latest.integration')
             }
           }
           rootProject {
             plugins.apply(org.openrewrite.gradle.RewritePlugin)
             dependencies {
-                rewrite('org.openrewrite.recipe:rewrite-recommendations:latest.release')
+                rewrite('org.openrewrite.recipe:rewrite-recommendations:latest.integration')
             }
             afterEvaluate {
               if (repositories.isEmpty()) {
