refactor: Find and replace OpenRewriteRecipeBestPractices
Use this link to re-run the recipe: https://app.moderne.io/recipes/org.openrewrite.text.FindAndReplace?organizationId=T3BlblJld3JpdGU%3D#defaults%3DW3sibmFtZSI6ImZpbmQiLCJ2YWx1ZSI6Im9yZy5vcGVucmV3cml0ZS5yZWNpcGVzLk9wZW5SZXdyaXRlQmVzdFByYWN0aWNlcyJ9LHsibmFtZSI6InJlcGxhY2UiLCJ2YWx1ZSI6Im9yZy5vcGVucmV3cml0ZS5yZWNpcGVzLnJld3JpdGUuT3BlblJld3JpdGVSZWNpcGVCZXN0UHJhY3RpY2VzIn1d

Co-authored-by: Moderne <team@moderne.io>

--- a/.github/workflows/receive-pr.yml
+++ b/.github/workflows/receive-pr.yml
@@ -8,7 +8,7 @@ on:
         description: The OpenRewrite recipe to apply to the PR
         type: string
         required: false
-        default: org.openrewrite.recipes.OpenRewriteBestPractices
+        default: org.openrewrite.recipes.rewrite.OpenRewriteRecipeBestPractices
       rewrite_yml:
         description: The contents of the rewrite.yml file to apply to the PR
         type: string
