--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -47,13 +47,18 @@ jobs:
         with:
           fetch-depth: 0
           show-progress: false
-      ########################
+
       - uses: actions/setup-java@v4.0.0
         with:
           distribution: temurin
           java-version: ${{ inputs.java_version }}
 
-      ########################
+      - name: restore-cache-m2
+        uses: uses: actions/cache/restore@v4
+        with:
+          path: ~/.m2/repository
+          key: m2
+
       - name: Setup Gradle
         uses: gradle/actions/setup-gradle@v4
         with:
