--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -54,7 +54,7 @@ jobs:
           java-version: ${{ inputs.java_version }}
 
       - name: restore-cache-m2
-        uses: uses: actions/cache/restore@v4
+        uses: actions/cache/restore@v4
         with:
           path: ~/.m2/repository
           key: m2
