--- a/.github/workflows/ci-gradle.yml
+++ b/.github/workflows/ci-gradle.yml
@@ -86,10 +86,12 @@ jobs:
           ls -la ~
           echo "/home/runner"
           ls -la /home/runner
-          echo "/runner"
-          ls -la /runner
           echo "/"
           cd /; find . -name .m2
+          echo ".m2"
+          ls -la /home/runner/.m2
+          echo ".m2/*"
+          ls -la /home/runner/.m2/repository/
      
       - name: cache-m2
         uses: actions/cache/save@v4
